samples/_failures_safe/1761281679_8faa91_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1c7ec7f0.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_1c7ec7f0.c:150:27: error: missing terminating ' character
  150 |         token->value[1] = '\
      |                           ^~
./samples/SAFE/__tmp_1c7ec7f0.c:150:9: error: expected expression at end of input
  150 |         token->value[1] = '\
      |         ^~~~~
./samples/SAFE/__tmp_1c7ec7f0.c:150:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1c7ec7f0.c:150:9: error: expected declaration or statement at end of input
